# squirrel

./: .gitignore  Cargo.toml  Makefile  README.md  bench.md
benches/: _bench.rs  bench.rs  bench_.rs
cpoly/: Cargo.toml  Makefile  README.md  build.rs
cpoly/c/: Makefile  hots_ntt.c  hvc_ntt.c  misc.c  misc.h  params.h  poly.c  poly.h  test.c
cpoly/c/foreign/: cpucycles.h
cpoly/src/: bindings.rs  lib.rs
scripts/: beta_agg_bound.sage  hash.sage  param1024.sage  param4096.sage  param8192.sage  roots.sage
src/: lib.rs  param.rs  randomizer.rs
src/hots/: hash.rs  mod.rs  pk.rs  sig.rs
src/hvc/: hash.rs  mod.rs
src/hvc/tree/: mod.rs  path.rs  randomize_path.rs
src/poly/: large_poly.rs  mod.rs  signed_poly.rs  small_poly.rs
src/smsig/: mod.rs
